# KUKA_KR_6_R900

./: CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
app/: CMakeLists.txt
app/src/app/: hardcoded_loaders.h  hardcoded_ui_states.h  main.cpp  robotwrapper.cpp  robotwrapper.h  urdf_loaders.h
app/src/app/examples/: ptplinetrajectorygeneratorexample.cpp  ptplinetrajectorygeneratorexample.h  tracikkinematicssolver.cpp  tracikkinematicssolver.h
app/src/app/implementations/: motionplannerimpl.cpp  motionplannerimpl.h  multipointtrajectorygenerator.cpp  multipointtrajectorygenerator.h  ptptrajectorygenerator.cpp  ptptrajectorygenerator.h  screwskinematicssolver.cpp  screwskinematicssolver.h  ui_state_serializer.h
simulation/: CMakeLists.txt
simulation/include/simulation/: factory.h  kinematicssolver.h  motionplanner.h  robot.h  robotcontrolinterface.h  trajectorygenerator.h
simulation/src/simulation/: factory.cpp  kinematicssolver.cpp  robotcontroldelegator.cpp  robotcontroldelegator.h  trajectoryexecutor.cpp  trajectoryexecutor.h
tests/: CMakeLists.txt
tests/utility/: CMakeLists.txt  enum_test.cpp  vectors_test.cpp
utility/: CMakeLists.txt
utility/include/utility/: csv.h  enum.h  math.h  vectors.h
utility/src/: math.cpp  vectors.cpp
visualization/: CMakeLists.txt
visualization/include/visualization/: robotscene.h
visualization/include/visualization/imgui/: imguiwindowcontext.h  widgets.h
visualization/include/visualization/imgui/windows/: posedisplaywindow.h  robotcontrolwindows.h  toolwindow.h  trajectoryloggerwindow.h  worldobjectconfigurationwindow.h
visualization/src/: robotscene.cpp
visualization/src/imgui/: imguiwindowcontext.cpp
visualization/src/imgui/windows/: posedisplaywindow.cpp  robotcontrolwindows.cpp  toolwindow.cpp  trajectoryloggerwindow.cpp  worldobjectconfigurationwindow.cpp
